# CryptoTaxCalc

./: .cursorrules.md  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  demo_missing_fmv_data.csv  demo_missing_fmv_report.txt  pyproject.toml  requirements.txt  setup.py  test_data_explorer_demo.py
PRDs/: # CryptoTaxCalc Product Requirements Doc.md  CryptoTaxApp.md
cline_docs/: activeContext.md  productContext.md  progress.md  systemPatterns.md  techContext.md
cryptotaxcalc/: __init__.py  data_explorer.py  fee_handler.py  fifo_manager.py  parser.py  tax_logic.py
cryptotaxcalc/utils/: constants.py
cryptotaxcalc_env/: pyvenv.cfg
data/samples/: README.md
team-rules/: README.md  additional-fullstackdev.cursorrules  coderdev1.cursorrules  coderdev2.cursorrules  fullstackdev.cursorrules  template.cursorrules
tests/: __init__.py  conftest.py  test_data_explorer.py  test_fee_handler.py  test_fifo_manager.py  test_parser.py  test_tax_logic.py
utils/: __init__.py  constants.py
